--- a/eTicket/appsettings.json
+++ b/eTicket/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DESKTOP-L3PK24L\\SQLEXPRESS;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
+  },
   "AllowedHosts": "*"
 }
+
