--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -1,14 +1,13 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DESKTOP-L3PK24L\\SQLEXPRESS;Initial Catalog=ecommerce1-app-db;Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-L3PK24L\\SQLEXPRESS;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
-  },
-  "AllowedHosts": "*"
+  }
 }
-
