Moving forward fom here.

--- a/eTickets.Tests/eTickets.Tests.csproj
+++ b/eTickets.Tests/eTickets.Tests.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\AccountControllerTests - Copy.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
